--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,6 @@ p {
 h2 {
     font-family: "Chalkduster", fantasy;   
     font-size: 62pt;
-    font-style: oblique;
+    font-style: italic;
 }
 
