--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ p {
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
+    position:absolute;
 }
 
 h2 {
@@ -17,6 +18,6 @@ h2 {
 
 img {
     position:relative;
-    width: 600px;
+    width: 1024px;
     height:800px;
 }
