--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background: aquamarine;
 }
 
-p {
+.text_wrapper p {
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
@@ -17,7 +17,7 @@ h2 {
 }
 
 img {
-    position:relative;
+    position:center;
     width: 1024px;
     height:800px;
 }
