--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
 .text_wrapper p {
     background-color: #cfc;
     padding: 10px;
-    border: 5px sogitlid blue;
+    border: 5px solid blue;
 }
 
 h2 {
