--- a/styles.css
+++ b/styles.css
@@ -3,20 +3,30 @@ body {
     background: aquamarine;
 }
 
+.content_wrapper {
+    width: 80%;
+    margin: 4%, 10%, 5%, 10%;
+} 
+
+.content_wrapper img {
+    width: 100%;
+}
+
+.text_wrapper {
+    width: 100%;
+    position: relative;
+    margin-top: -40%;
+}
+
 .text_wrapper p {
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
 }
 
-h2 {
+.text_wrapper h2 {
     font-family: "Chalkduster", fantasy;   
-    font-size: 62pt;
+    font-size: 62px;
     font-style: italic;
 }
 
-.content_wrapper img {
-    position:center;
-    width: 1024px;
-    height:800px;
-}
