--- a/styles.css
+++ b/styles.css
@@ -4,32 +4,26 @@ body {
 }
 
 .content_wrapper {
-    margin: 3%;
-    position: relative;
+    width: 80%;
+    margin: 4%, 10%, 5%, 10%;
 } 
 
+
 .text_wrapper {
-    font-family: "Chalkduster", fantasy; 
-    position: absolute;
-    top: 17px;
-    left: 50px;
+    width: 100%;
+    position: relative;
+    margin-top: -40%;
 }
 
-.p_wrapper {
+.text_wrapper p {
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
-    position: absolute;
-    top: 20px;
-    left: 10px;
 }
 
-.p1_wrapper {
-    background-color: #cfc;
-    padding: 10px;
-    border: 5px solid blue; 
-    position: absolute;
-    top: 20px;
-    left: 10px;
+.text_wrapper h2 {
+    font-family: "Chalkduster", fantasy;   
+    font-size: 62px;
+    font-style: italic;
 }
 
