--- a/styles.css
+++ b/styles.css
@@ -28,5 +28,7 @@ body {
     font-family: "Chalkduster", fantasy;   
     font-size: 62px;
     font-style: italic;
+    top: 17px;
+    left: 50px;
 }
 
