--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     font-family: "Chalkduster", fantasy;   
     font-size: 62px;
     font-style: italic;
-    top: 57px;
-    left: 150px;
+    margin-top: 57px;
+    margin-left: 150px;
 }
 
