--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     font-family: "Chalkduster", fantasy;   
     font-size: 62px;
     font-style: italic;
-    margin-top: 57px;
-    margin-left: 150px;
+    top: -80%;
+    left: -30%;
 }
 
