--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@ body {
 }
 
 .p_wrapper {
+    font-family: "Chalkduster", fantasy; 
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
 }
 
 .p1_wrapper {
+    font-family: "Chalkduster", fantasy; 
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
