--- a/styles.css
+++ b/styles.css
@@ -13,36 +13,35 @@ body {
     width: 100%;
 } 
 
-.text_wrapper {
+.content_wrapper .text_wrapper {
     width: 80%;
     position: relative;
     margin-top: -40%;
 }
 
-.p_wrapper {
+.content_wrapper .text_wrapper .p_wrapper {
     font-family: "Chalkduster", fantasy; 
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
 }
 
-.p1_wrapper {
+.content_wrapper .text_wrapper .p1_wrapper {
     font-family: "Chalkduster", fantasy; 
     background-color: #cfc;
     padding: 10px;
     border: 5px solid blue;
 }
 
-.h2_wrapper {
+.content_wrapper .text_wrapper .h2_wrapper {
     font-family: "Chalkduster", fantasy;   
     font-size: 62px;
     font-style: italic;
     color: white;
-    background-color: rgba(0, 0, 0, 0);
-    display: flex;
-    height: 20vh;
-    width: 50%; 
-    top: 400px;
-    right: 550px;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: inline-block;
+    top: 40%;
+    left: 0;
+    right: 150px;
 }
 
