--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 } 
 
 .heading_wrapper .h2_wrapper {
-    width: 50%;
+    width: 80%;
     position: absolute;
     top: 8px;
     right: 16px;
@@ -47,6 +47,6 @@ body {
     color: white;
     background-color: rgba(0, 0, 0, 0.8);
     display: inline-block;
-    text-align: right;
+    text-align: left;
 }
 
