--- a/styleWeek4.css
+++ b/styleWeek4.css
@@ -9,16 +9,15 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  height: 50vh;
+  height: 100vh;
 }
 .container {
   position: relative;
-  align-items: center;
   width: 48%;
-  overflow: hidden;
+
 }
 
-@media screen and (max-width:480px) {
+@media screen and (max-width:1080px) {
   .container {
     width: 100%;
     margin-top: 20px;
@@ -27,6 +26,9 @@
     height: 100vh;
   }
 }
+
+
+
 .img{
   background-size: 100% 100%; 
   transition: all .4s ease-in;
@@ -37,29 +39,58 @@
   bottom: 0;
 }
 .img1{
+  background-position: center;
+  border-radius: 100%;
   background-image: url('likes.JPG');
+  border: 30px solid #0bace2;
 }
 .img2{
+  background-position: center;
+  border-radius: 100%;
   background-image: url('likes.JPG');
+  border: 30px solid #0bace2;
 }
 
 .img3{
   background-image: url('likes.JPG');
+  top: 30%;
+  left: 78%;
+  width: 50%;
+  height: 50%;
+  border: 20px solid rgb(218, 137, 137);
 }
 
 a {
   color: white;
 }
 
-.container:hover .img1{
+.container:hover .img1 {
   background-image: url('sketchcollage.JPG');
+  opacity: 0;
+  transition: all 4s ease-in;
+  background-color: rgba(50,50,50,0.5);
+  color: white;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
 }
-.container:hover .img2{
+.container:hover .img2 {
   background-image: url('digitalartcollage.JPG');
+  opacity: 0;
+  transition: all 4s ease-in;
+  background-color: rgba(50,50,50,0.5);
+  color: white;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
 }
 
-.container:hover .img3{
+.container:hover .img3 {
   background-image: url('streaming.JPG');
+  opacity: 0;
+  transition: all 4s ease-in;
+  background-color: rgba(50,50,50,0.5);
+  color: white;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
 }
 
 
