--- a/Project presentation/theStyle.css
+++ b/Project presentation/theStyle.css
@@ -2,14 +2,15 @@
   box-sizing: border-box;
 }
 body {
+  background: url(https://64.media.tumblr.com/6fa9ad9f859cf058bfe19a2536b0aa11/tumblr_pkv647vWBM1xp1j77o1_540.gifv);
   background-size: cover;
   color: white;
   display: inline-block;
 }
 .title {
-  position:absolute;
-  top:30px;
-  left:75%;
+  position: absolute;
+  top: 30px;
+  left: 75%;
   opacity: 80%;
 }
 .star {
@@ -20,7 +21,6 @@ body {
 .glow {
   animation: glitter 10s infinite;
 }
-
 .star1 {
   position: absolute;
   top: 80px;
@@ -81,6 +81,17 @@ audio::-webkit-media-controls-panel {
 }
 */
 
+a.star img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  }
+
+a.star.glow{
+  background: rgba(255, 255, 255, 0.48);
+}
+
 .text-block {
   text-align: center;
   font-size: 20px;
@@ -133,7 +144,7 @@ audio::-webkit-media-controls-panel {
   height: auto;
   padding: 1%;
 }
-.container img{
+.container img {
   position: absolute;
   top: 30px;
   left: 0;
@@ -190,8 +201,6 @@ h1 {
     box-shadow: 0px 0px 10px 5px #535fed;
   }
 }
-
-
 
 .sky-wrapper {
   position: fixed;
@@ -435,4 +444,27 @@ html {
     filter: alpha(opacity=0);
     opacity: 0;
   }
+}
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+}
+.modal.active{
+  display: block;
+}
+.modal .modal-close {
+  position: absolute;
+  right: 30px;
+  top: 9px;
+  font-size: 59px;
+  line-height: 42px;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: 4px;
+  color: #000;
+  cursor: pointer;
 }
