--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ header {
     width: 100%;
     height: 20vh;
     overflow: hidden;
-    margin-top: 71px;
+    top: 2.9%;
     background: #000;
 }
 .icon-banner i{
