--- a/styles.css
+++ b/styles.css
@@ -206,3 +206,24 @@ ul.navbar li a:hover:not(.active) {
     height: 100%;
 }
 
+/* logo and header section ends here*/
+
+.section-1{
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(rgba(0, 0, 0, 0.767), rgba(0, 0, 0, 0.712)), url("Home Page/2nd section background.png");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+.section-1-wrapper{
+    width: 70%;
+    margin: auto;
+}
+
+.section-1 h1{
+    font-size: 1.5rem;
+    color: #fe53fe;
+    font-weight: 450;
+}
