--- a/styles.css
+++ b/styles.css
@@ -208,22 +208,156 @@ ul.navbar li a:hover:not(.active) {
 
 /* logo and header section ends here*/
 
-.section-1{
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.767), rgba(0, 0, 0, 0.712)), url("Home Page/2nd section background.png");
+.bg_blue {
+    background: linear-gradient(#2b1055, #7597de);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
-}
-
-.section-1-wrapper{
-    width: 70%;
-    margin: auto;
-}
-
-.section-1 h1{
-    font-size: 1.5rem;
-    color: #fe53fe;
-    font-weight: 450;
-}
+  }
+  .section_parallax1 {
+    font-family: "Poppins", sans-serif;
+  }
+  .section_parallax1-content {
+    height: 100vh;
+    position: relative;
+    padding: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+  }
+  .section_parallax1-content > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+  }
+  
+  .section_parallax1 img#moon {
+    mix-blend-mode: screen;
+    object-fit: contain;
+    transform: scale(1.2);
+  }
+  .section_parallax1 img#mountains_front {
+    z-index: 10;
+  }
+  .section_parallax1 #text {
+    position: absolute;
+    color: #fff;
+    white-space: nowrap;
+    font-size: 7.5em;
+    z-index: 9;
+    right: -300px;
+  }
+  .section-sub {
+    position: relative;
+    padding: 100px;
+    background: #1c0522;
+    font-family: "Poppins", sans-serif;
+    color: #fff;
+  }
+  .section_parallax1 .section-sub::before {
+    content: "";
+    position: absolute;
+    bottom: 100%;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #1c0522, transparent);
+    z-index: 1000;
+  }
+  .section-sub h2 {
+    font-size: 3.5em;
+    margin-bottom: 10px;
+    color: #fff;
+  }
+  
+  .section-1-img {
+    display: flex;
+  }
+  
+  .section-1-img .img {
+    width: 100px;
+    height: 130px;
+    background: url("./images/Riley_cover.png");
+    background-size: cover;
+    background-position: center;
+    margin-right: 10px;
+    border-radius: 10px;
+  }
+  
+  .section-1-img .img-2 {
+    background: url("./images/snowball_cover.gif");
+    background-size: cover;
+    background-position: center;
+  }
+  
+  .img:hover {
+    transform: translateY(-10px);
+  }
+  
+  /* section one ends here */
+  
+  .char_model h1 {
+    font-size: 3.5em;
+    margin-bottom: 10px;
+    margin: 30px 0;
+    color: #fff;
+  }
+  
+  .char_model .owl-carousel {
+    margin: 50px 0 120px;
+  }
+  .char_model .owl-carousel .owl-nav {
+    display: block !important;
+  }
+  
+  
+  /* section 2 starts here*/
+  
+  .section-2{
+    width: 100%;
+    height: 80vh;
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/section2_background.PNG);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+  }
+  
+  .section-2 h1{
+    font-size: 2rem;
+    color: #fff;
+    text-align: center;
+    font-weight: 400;
+  }
+  
+  .section-2-wrapper{
+    display: flex;
+    min-width: none;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+  }
+  
+  .description{
+    width: 250px;
+    height: 200px;
+    background: url(./images/pfp.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 50%;
+    padding-right: 50px;
+  }
+  
+  .description-desc{
+    width: 450px;
+    height: 280px;
+    background: rgba(0, 0, 0, 0.767);
+    padding: 30px;
+    color: #fff;
+    margin-right: 10px;
+  }
