--- a/styles.css
+++ b/styles.css
@@ -283,7 +283,7 @@ ul.navbar li a:hover:not(.active) {
   .section-1-img .img {
     width: 100px;
     height: 130px;
-    background: url("./images/Riley_cover.png");
+    background: url("./Images/Riley_cover.png");
     background-size: cover;
     background-position: center;
     margin-right: 10px;
@@ -291,7 +291,7 @@ ul.navbar li a:hover:not(.active) {
   }
   
   .section-1-img .img-2 {
-    background: url("./images/snowball_cover.gif");
+    background: url("./Images/snowball_cover.gif");
     background-size: cover;
     background-position: center;
   }
@@ -322,7 +322,7 @@ ul.navbar li a:hover:not(.active) {
   .section-2{
     width: 100%;
     height: 80vh;
-    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./images/section2_background.PNG);
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Images/section2_background.PNG);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -346,7 +346,7 @@ ul.navbar li a:hover:not(.active) {
   .description{
     width: 250px;
     height: 200px;
-    background: url(./images/pfp.jpg);
+    background: url(./Images/pfp.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
