--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ header {
   overflow: hidden;
   top: 2.9%;
   background: #000;
-  margin-bottom: 60px;
+  margin-bottom: 10px;
 }
 .icon-banner i {
   color: #ffffff;
@@ -285,7 +285,7 @@ ul.navbar li a:hover:not(.active) {
 .section-1-img .img {
   width: 100px;
   height: 130px;
-  background: url("./images/Riley_cover.png");
+  background: url("./Images/Riley_cover.png");
   background-size: cover;
   background-position: center;
   margin-right: 10px;
@@ -293,7 +293,7 @@ ul.navbar li a:hover:not(.active) {
 }
 
 .section-1-img .img-2 {
-  background: url("./images/snowball_cover.gif");
+  background: url("./Images/snowball_cover.gif");
   background-size: cover;
   background-position: center;
 }
@@ -316,4 +316,49 @@ ul.navbar li a:hover:not(.active) {
 }
 .char_model .owl-carousel .owl-nav {
   display: block !important;
+}
+
+/* section 2 starts here*/
+
+.section-2{
+  width: 100%;
+  height: 80vh;
+  background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(./Images/section2_background.PNG);
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.section-2 h1{
+  font-size: 2rem;
+  color: #fff;
+  text-align: center;
+  font-weight: 400;
+}
+
+.section-2-wrapper{
+  display: flex;
+  min-width: none;
+  align-items: center;
+  justify-content: center;
+  margin-top: 5%;
+}
+
+.description{
+  width: 250px;
+  height: 200px;
+  background: url(./Images/pfp.jpg);
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  padding-right: 50px;
+}
+
+.description-desc{
+  width: 450px;
+  height: 280px;
+  background: rgba(0, 0, 0, 0.767);
+  padding: 30px;
+  color: #fff;
+  margin-right: 10px;
 }
