--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1;
+  z-index: 2;
 }
 
 .logo {
@@ -325,7 +325,7 @@ ul.navbar li a:hover:not(.active) {
 }
 
 .about-left{
-  background: #f26a8c;
+  background: #00c3e6;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -334,7 +334,9 @@ ul.navbar li a:hover:not(.active) {
 }
 
 .about-left-content > div{
-  background: #f49cbb;
+  background: url("./Images/ID\ card\ background.PNG");
+  background-position: center;
+  background-size: cover;
   padding: 4rem 4rem 2.5rem 5rem;
   text-align: center;
 }
@@ -352,9 +354,7 @@ ul.navbar li a:hover:not(.active) {
 
 .about-img{
   width: 200px;
-  height: 180px;
-  background-size: cover;
-  background-position: center;
+  height: 200px;
   overflow: hidden;
   border-radius: 50%;
   transition: all 0.5s ease-in-out;
@@ -405,15 +405,15 @@ ul.navbar li a:hover:not(.active) {
   margin-top: 1.2rem;
 }
 .icons{
-  background: #fff;
+  background: #00ccff;
   display: flex;
   justify-content: center;
   padding: 0.8rem 0;
 }
 .icons li{
   list-style-type: none;
-  background: #f36a8d;
-  color: #fff;
+  background: #fff;
+  color: rgb(0, 0, 0);
   width: 40px;
   height: 40px;
   margin: 0 0.5rem;
@@ -426,71 +426,78 @@ ul.navbar li a:hover:not(.active) {
   transition: all 0.5s ease-in-out;
 }
 .icons li:hover{
-  background: #edffec;
+  background: #d0fdce;
   color: #000;
 }
-
-
-.box{
-  position: relative;
-  width: 300px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.5);
-}
-
-.box::before{
-  content: '';
-  position: absolute;
-  width: 150px;
-  height: 140%;
-  background: linear-gradient(#00ccff, #d400d4);
-  animation: animate 4s linear infinite;
-}
-
-.box::after{
-  content: '';
-  position: absolute;
-  inset: 4px;
-  background: #0e1538;
-}
-
-.box .about-right h1{
-  position: relative;
-  color: #fff;
-  z-index: 10;
-}
-
-.box .about-right h2{
-  position: relative;
-  color: #fff;
-  z-index: 10;
-}
-
-.box .about-right .about-para p{
-  position: relative;
-  color: #fff;
-  z-index: 10;
-}
-
-.about-right{
-  background: #fff;
+.box-wrapper {
+  background:rgba(0, 0, 0, 0.5);
   height: 100vh;
+  background: #03054b;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 5rem;
+  padding: 0 20px 0 75px;
+}
+.box-wrapper .about-right h1{
+  position: relative;
+  color: rgb(255, 255, 255);
+  z-index: 10;
+}
+
+.box-wrapper .about-right h2{
+  position: relative;
+  color: rgb(255, 255, 255);
+  z-index: 10;
+}
+
+.box-wrapper .about-right .about-para p{
+  position: relative;
+  color: rgb(255, 255, 255);
+  z-index: 10;
+}
+
+.about-right{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
   text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.about-right::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate 4s linear infinite;
+}
+.about-right::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate {
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
 }
 .about-right h1{
   font-size: 7rem;
   text-transform: uppercase;
 }
 .about-right h1 span{
-  color: #dd2d4a;
+  color: #00d9ff;
 }
 .about-right h2{
   font-weight: 600;
@@ -498,12 +505,13 @@ ul.navbar li a:hover:not(.active) {
 .about-btns{
   display: flex;
   margin: 2rem 0;
+  z-index: 1;
 }
 .btn{
   border: none;
   font-size: 0.9rem;
   text-transform: uppercase;
-  border: 2px solid #000;
+  border: 2px solid rgb(255, 255, 255);
   border-radius: 20px;
   padding: 0.55rem 0;
   width: 130px;
@@ -513,23 +521,24 @@ ul.navbar li a:hover:not(.active) {
   cursor: pointer;
 }
 .btn.btn-pink{
-  background: #dd2d4a;
-  color: #fff;
-  border-color: #dd2d4a;
+  background: #00d9ff;
+  color: rgb(0, 0, 0);
+  border-color: #00d9ff;
   transition: all 0.5s ease-in-out;
 }
 .btn.btn-pink:hover{
   background: transparent;
-  border-color: #dd2d4a;
-  color: #000;
+  border-color: #00d9ff;
+  color: rgb(255, 255, 255);
 }
 .btn.btn-white{
+  color: #fff;
   transition: all 0.5s ease-in-out;
 }
 .btn.btn-white:hover{
-  background: #dd2d4a;
-  border-color: #dd2d4a;
-  color: #fff;
+  background: #00d9ff;
+  border-color: #00d9ff;
+  color: rgb(0, 0, 0);
 }
 .about-para p{
   font-weight: 300;
@@ -551,3 +560,199 @@ ul.navbar li a:hover:not(.active) {
   }
 }
 
+
+
+:root {
+  --accent-color: #0573ff;
+  --gradient-color: #FBFBFB;
+}
+a:focus {
+  outline: none;
+  position: relative;
+}
+a:focus:after {
+  width: 50px;
+}
+a:after {
+  content: "";
+  background: #FBFBFB;
+  position: absolute;
+  bottom: 5px;
+  left: 15px;
+  height: 3px;
+  width: 0;
+  transition: .5s;
+  transition-delay: .2s;
+}
+
+.menu {
+  margin: 15px;
+}
+.menu > ol {
+  list-style: none;
+  margin: 30px 0;
+  padding: 0;
+}
+.menu > ol > li {
+  background: #0573ff;
+  border-left: 5px solid var(--gradient-color);
+  margin-bottom: 1px;
+  position: relative;
+  transition: .5s;
+}
+.menu > ol > li:nth-child(1) {
+  --accent-color: #f2ff00;
+  --gradient-color: #0023f8;
+}
+.menu > ol > li:nth-child(2) {
+  --accent-color: #00fff3;
+  --gradient-color: #a741ff;
+}
+
+.menu > ol > li:nth-child(2):hover {
+  height: 200px;
+}
+
+.menu > ol > li:nth-child(3) {
+  --accent-color: #ff6ecc;
+  --gradient-color: #0087ff;
+}
+.menu > ol > li:nth-child(4) {
+  --accent-color: #5761a7;
+  --gradient-color: #06ffa5;
+}
+.menu > ol > li:nth-child(5) {
+  --accent-color: #C6EA8D;
+  --gradient-color: #FE90AF;
+}
+.menu > ol > li a {
+  color: #FBFBFB;
+  display: block;
+  padding: 15px;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+}
+.menu > ol > li a:not(:last-child):before {
+  content: "\f078";
+  font-family: fontAwesome;
+  font-size: .75em;
+  line-height: 50px;
+  position: absolute;
+  right: 25px;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  transition: .5s;
+}
+.menu > ol > li:focus, .menu > ol > li:focus-within, .menu > ol > li:hover {
+  z-index: 100;
+}
+.menu > ol > li:focus:after, .menu > ol > li:focus-within:after, .menu > ol > li:hover:after {
+  background: linear-gradient(to left,var(--accent-color),var(--gradient-color));
+  max-width: 800px;
+}
+.menu > ol > li:focus .sub-menu, .menu > ol > li:focus-within .sub-menu {
+  max-height: 500px;
+}
+.menu > ol > li:focus a:before, .menu > ol > li:focus-within a:before {
+  transform: rotate(-180deg);
+}
+.menu > ol > li:after {
+  background: #3c3c3c;
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition: .5s;
+  max-width: 0;
+  overflow: hidden;
+}
+.menu > ol .sub-menu {
+  border-left: 1px solid #FBFBFB;
+  margin-left: 22.5px;
+  list-style: none;
+  max-height: 0px;
+  overflow: hidden;
+  padding-left: 7.5px;
+  position: relative;
+  transition: .5s;
+  z-index: 1;
+}
+.menu > ol .sub-menu li {
+  font-size: .9em;
+}
+.menu > ol .sub-menu li:hover, .menu > ol .sub-menu li a:focus {
+  background: rgba(60,60,60,0.3);
+}
+.menu > ol .sub-menu li a:after {
+  bottom: 5px;
+  height: 1px;
+}
+.menu > ol .sub-menu li a:hover:after, .menu > ol .sub-menu li a:focus:after {
+  width: 15px;
+}
+@media (min-width: 600px) {
+  a:focus, a:hover {
+    position: relative;
+ }
+  a:focus:after, a:hover:after {
+    width: 50px;
+ }
+  a:after {
+    left: 0;
+    right: 0;
+    margin: auto;
+ }
+  .menu {
+    margin: 10px;
+    margin-top: 5vh;
+    margin-left: -70px;
+ }
+  .menu > ol {
+    display: block;
+    max-width: none;
+    text-align: center;
+ }
+  .menu > ol > li {
+    border-top: 5px solid var(--accent-color);
+    border-left: 0;
+    display: inline-block;
+    margin-left: -5px;
+    vertical-align: top;
+    width: 120px;
+ }
+  .menu > ol > li:hover:after, .menu > ol > li:focus:after, .menu > ol > li:focus-within:after {
+    background: linear-gradient(to bottom,var(--accent-color),var(--gradient-color));
+    border-radius: 3px;
+    top: -15px;
+    bottom: -15px;
+    left: -15px;
+    right: -15px;
+ }
+  .menu > ol > li:hover .sub-menu, .menu > ol > li:focus .sub-menu, .menu > ol > li:focus-within .sub-menu {
+    max-height: 750px;
+ }
+  .menu > ol > li a:not(:last-child):before {
+    right: 12.5px;
+ }
+  .menu > ol > li:hover a:before {
+    transform: rotate(-180deg);
+ }
+  .menu > ol .sub-menu {
+    border-left: 0;
+    margin: 15px -15px -15px;
+    padding-left: 0;
+ }
+}
+@media (min-width: 775px) {
+  .menu > ol > li {
+    width: 522px;
+    height: 100px;
+ }
+  .menu > ol > li a:not(:last-child):before {
+    right: 25px;
+ }
+}
