--- a/styles.css
+++ b/styles.css
@@ -594,7 +594,7 @@ a:after {
   padding: 0;
 }
 .menu > ol > li {
-  background: #0573ff;
+  background: #03054b;
   border-left: 5px solid var(--gradient-color);
   margin-bottom: 1px;
   position: relative;
