--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-/* index.html styles*/
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 * {
@@ -69,11 +67,11 @@ header {
   height: 20vh;
   overflow: hidden;
   top: 2.9%;
-  background: #000;
+  background: rgb(255, 255, 255);
   margin-bottom: 10px;
 }
 .icon-banner i {
-  color: #ffffff;
+  color: #000000;
 }
 .icon-banner h1 {
   width: 850px;
@@ -97,13 +95,13 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000;
+  background: rgb(255, 255, 255);
   display: flex;
-  color: #fff;
+  color: rgb(47, 0, 104);
   justify-content: center;
   align-items: center;
   z-index: 2;
-  mix-blend-mode: multiply;
+  mix-blend-mode:screen;
   padding-left: 20px;
   margin: 0;
 }
@@ -258,7 +256,7 @@ ul.navbar li a:hover:not(.active) {
 .section-sub {
   position: relative;
   padding: 100px;
-  background: #1c0522;
+  background: #000c4f;
   font-family: "Poppins", sans-serif;
   color: #fff;
 }
@@ -269,7 +267,17 @@ ul.navbar li a:hover:not(.active) {
   left: 0;
   width: 100%;
   height: 100px;
-  background: linear-gradient(to top, #1c0522, transparent);
+  background: linear-gradient(to top, #000c4f, transparent);
+  z-index: 1000;
+}
+.section_parallax1 .section-sub::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 150px;
+  background: linear-gradient(to bottom, #000c4f, transparent);
   z-index: 1000;
 }
 .section-sub h2 {
@@ -294,6 +302,12 @@ ul.navbar li a:hover:not(.active) {
 
 .section-1-img .img-2 {
   background: url("./Images/snowball_cover.gif");
+  background-size: cover;
+  background-position: center;
+}
+
+.section-1-img .img-3 {
+  background: url("./Images/glitch.gif");
   background-size: cover;
   background-position: center;
 }
@@ -612,8 +626,8 @@ a:after {
   --gradient-color: #a741ff;
 }
 
-.menu > ol > li:nth-child(2):hover {
-  height: 200px;
+.menu > ol>li:nth-child(2):hover {
+  height: 250px;
 }
 
 .menu > ol > li:nth-child(3) {
@@ -712,7 +726,11 @@ a:after {
   .menu {
     margin: 10px;
     margin-top: 5vh;
-    margin-left: -70px;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    font-size: 28px;
+    font-weight: 700;
  }
   .menu > ol {
     display: block;
@@ -725,7 +743,7 @@ a:after {
     display: inline-block;
     margin-left: -5px;
     vertical-align: top;
-    width: 120px;
+    width: 33.33%;
  }
   .menu > ol > li:hover:after, .menu > ol > li:focus:after, .menu > ol > li:focus-within:after {
     background: linear-gradient(to bottom,var(--accent-color),var(--gradient-color));
@@ -748,14 +766,79 @@ a:after {
     border-left: 0;
     margin: 15px -15px -15px;
     padding-left: 0;
+    font-weight: 500;
  }
 }
 @media (min-width: 775px) {
   .menu > ol > li {
-    width: 522px;
+    width: 33.33%;
     height: 100px;
  }
   .menu > ol > li a:not(:last-child):before {
     right: 25px;
  }
+}
+
+/* Slider modifications */
+
+.owl-carousel {
+    position: relative;
+}
+
+.owl-nav {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+}
+
+.owl-nav .owl-prev,
+.owl-nav .owl-next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  font-size: 0 !important;
+}
+
+.owl-nav .owl-prev:hover,
+.owl-nav .owl-next:hover {
+  background: transparent !important;
+}
+
+.owl-nav .owl-prev:hover:before,
+.owl-nav .owl-next:hover:before {
+  opacity: 0.5;
+  color: skyblue;
+}
+
+.owl-nav .owl-prev:before,
+.owl-nav .owl-next:before {
+  font-family: fontAwesome;
+  font-size: 40px;
+}
+
+
+
+.owl-nav .owl-prev:before {
+  content: "\f137";
+}
+
+.owl-nav .owl-next:before {
+  content: "\f138";
+}
+
+.owl-nav .owl-prev {
+  left: -65px;
+}
+
+.owl-nav .owl-next {
+  right: -65px;
+}
+
+.owl-stage-outer,
+.owl-theme .owl-dots {
+  position: relative;
+  z-index: 20;
 }
