--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,20 @@ body {
   height: 350vh;
 }
 
+
+html::-webkit-scrollbar-thumb {
+  background: rgb(0, 229, 255);
+  border-radius: 5rem;
+}
+
+html::-webkit-scrollbar {
+  width: 1rem;
+}
+
+html::-webkit-scrollbar-track {
+  background: linear-gradient(rgba(0, 153, 255, 0.829), rgba(221, 0, 203, 0.39), rgb(3, 5, 75));
+}
+
 .container {
   width: 100%;
   height: 100vh;
@@ -280,11 +294,8 @@ ul.navbar li a:hover:not(.active) {
   background: linear-gradient(to bottom, #000c4f, transparent);
   z-index: 1000;
 }
-.section-sub h2 {
-  font-size: 3.5em;
-  margin-bottom: 10px;
-  color: #fff;
-}
+
+
 
 .section-1-img {
   display: flex;
@@ -312,18 +323,306 @@ ul.navbar li a:hover:not(.active) {
   background-position: center;
 }
 
+.section-1-img .img-4 {
+  background: url("./Images/pirate.GIF");
+  background-size: cover;
+  background-position: center;
+}
+
 .img:hover {
   transform: translateY(-10px);
 }
 
 /* section one ends here */
 
-.char_model h1 {
+
+.section-sub .game-wrapper .game-anim-title #game {
   font-size: 3.5em;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   margin: 30px 0;
   color: #fff;
+  position: relative;
+  z-index: 10;
 }
+
+.game-wrapper {
+  background:rgba(0, 0, 0, 0.5);
+  height: 40vh;
+  background: #000c4f;
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  justify-content:center;
+ 
+}
+
+.game-anim-title{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.game-anim-title::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate1 4s linear infinite;
+}
+.game-anim-title::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate1 {
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+
+.char_model .modeling-wrapper .model-anim-title #modeling {
+  font-size: 3.5em;
+  margin-bottom: 30px;
+  margin: 30px 0;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+
+.modeling-wrapper {
+  background:rgba(0, 0, 0, 0.5);
+  height: 50vh;
+  background: #000c4f;
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  justify-content:end;
+ 
+}
+
+.model-anim-title{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.model-anim-title::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate2 4s linear infinite;
+}
+.model-anim-title::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate2 {
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+
+
+
+
+.char_model .interior-wrapper .interior-anim-title #interior {
+  font-size: 3.5em;
+  margin-bottom: 30px;
+  margin: 30px 0;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+
+.interior-wrapper {
+  background:rgba(0, 0, 0, 0.5);
+  height: 30vh;
+  background: #000c4f;
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  justify-content:end;
+ 
+}
+
+.interior-anim-title{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.interior-anim-title::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate3 4s linear infinite;
+}
+.interior-anim-title::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate3{
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+
+.char_model .art-wrapper .art-anim-title #art {
+  font-size: 3.5em;
+  margin-bottom: 30px;
+  margin: 30px 0;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+
+.art-wrapper {
+  background:rgba(0, 0, 0, 0.5);
+  height: 30vh;
+  background: #000c4f;
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  justify-content:end;
+ 
+}
+
+.art-anim-title{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.art-anim-title::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate4 4s linear infinite;
+}
+.art-anim-title::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate4{
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+
+.char_model .animation-wrapper .animation-anim-title #animation {
+  font-size: 3.5em;
+  margin-bottom: 30px;
+  margin: 30px 0;
+  color: #fff;
+  position: relative;
+  z-index: 10;
+}
+
+.animation-wrapper {
+  background:rgba(0, 0, 0, 0.5);
+  height: 30vh;
+  background: #000c4f;
+  display: flex;
+  flex-direction: column;
+  align-items: bottom;
+  justify-content:end;
+ 
+}
+
+.animation-anim-title{
+  position: relative;
+  background:rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.4rem 5rem;
+  text-align: center;
+  overflow: hidden;
+  border-radius: 20px;
+}
+.animation-anim-title::before{
+  content: '';
+  position: absolute;
+  width: 140%;
+  height: 90%;
+  background: linear-gradient(#00ccff,#d400d4);
+  animation: animate5 4s linear infinite;
+}
+.animation-anim-title::after{
+  content: '';
+  position: absolute;
+  background: #03054b;
+  inset: 4px;
+  border-radius: 16px;
+}
+@keyframes animate5{
+  0% {
+transform: rotate(0deg)
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+
+
+
+
+
 
 .char_model .owl-carousel {
   margin: 50px 0 120px;
@@ -372,7 +671,7 @@ ul.navbar li a:hover:not(.active) {
   width: 200px;
   height: 200px;
   overflow: hidden;
-  border-radius: 50%;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
   transition: all 0.5s ease-in-out;
   
 }
@@ -491,7 +790,7 @@ ul.navbar li a:hover:not(.active) {
   width: 140%;
   height: 90%;
   background: linear-gradient(#00ccff,#d400d4);
-  animation: animate 4s linear infinite;
+  animation: animate6 4s linear infinite;
 }
 .about-right::after{
   content: '';
@@ -500,7 +799,7 @@ ul.navbar li a:hover:not(.active) {
   inset: 4px;
   border-radius: 16px;
 }
-@keyframes animate {
+@keyframes animate6 {
   0% {
 transform: rotate(0deg)
   }
@@ -603,11 +902,13 @@ a:after {
 
 .menu {
   margin: 15px;
+  
 }
 .menu > ol {
   list-style: none;
   margin: 30px 0;
   padding: 0;
+  
   
 }
 .menu > ol > li {
@@ -616,10 +917,12 @@ a:after {
   margin-bottom: 1px;
   position: relative;
   transition: .5s;
+  
 }
 .menu > ol > li:nth-child(1) {
   --accent-color: #f2ff00;
   --gradient-color: #0023f8;
+  
 }
 .menu > ol > li:nth-child(2) {
   --accent-color: #00fff3;
@@ -633,6 +936,7 @@ a:after {
 .menu > ol > li:nth-child(3) {
   --accent-color: #ff6ecc;
   --gradient-color: #0087ff;
+  
 }
 .menu > ol > li:nth-child(4) {
   --accent-color: #5761a7;
@@ -649,6 +953,7 @@ a:after {
   position: relative;
   text-decoration: none;
   z-index: 1;
+  
 }
 .menu > ol > li a:not(:last-child):before {
   content: "\f078";
@@ -661,13 +966,16 @@ a:after {
   bottom: 0;
   margin: auto;
   transition: .5s;
+  
 }
 .menu > ol > li:focus, .menu > ol > li:focus-within, .menu > ol > li:hover {
   z-index: 100;
+  
 }
 .menu > ol > li:focus:after, .menu > ol > li:focus-within:after, .menu > ol > li:hover:after {
   background: linear-gradient(to left,var(--accent-color),var(--gradient-color));
   max-width: 800px;
+  
 }
 .menu > ol > li:focus .sub-menu, .menu > ol > li:focus-within .sub-menu {
   max-height: 500px;
@@ -686,6 +994,7 @@ a:after {
   transition: .5s;
   max-width: 0;
   overflow: hidden;
+  
 }
 .menu > ol .sub-menu {
   border-left: 1px solid #FBFBFB;
@@ -733,9 +1042,12 @@ a:after {
     font-weight: 700;
  }
   .menu > ol {
-    display: block;
+    display: flex;
     max-width: none;
     text-align: center;
+    max-height: 100px;
+    align-items: end;
+    justify-content: space-around;
  }
   .menu > ol > li {
     border-top: 5px solid var(--accent-color);
